# raja-suite-tutorial

./: .gitmodules  CMakeLists.txt  README  README.md
Intermediate_Tutorial/: CMakeLists.txt  README.md  fractal-ex1-RAJA-loop.cpp  old_guide.rst  tutorial-guide.rst
Intermediate_Tutorial/00-BASE/: CMakeLists.txt  README.md  fractal-ex0-c-loop.cpp
Intermediate_Tutorial/01-LOOP/: CMakeLists.txt  fractal-ex1-RAJA-loop.cpp  tutorial-guide.rst
Intermediate_Tutorial/01-LOOP/solutions/: fractal-ex1-RAJA-loop.cpp
Intermediate_Tutorial/01-SEQ/: CMakeLists.txt  README.md  fractal-ex1-RAJA-seq.cpp  tutorial-guide.rst
Intermediate_Tutorial/01-SEQ/solutions/: fractal-ex1-RAJA-seq-solution.cpp  fractal-ex1-RAJA-seq.cpp
Intermediate_Tutorial/02-CUDA/: CMakeLists.txt  README.md  fractal-ex2-RAJA-CUDA.cpp
Intermediate_Tutorial/02-CUDA/solutions/: CMakeLists.txt  fractal-ex2-RAJA-CUDA-solution.cpp  fractal-solution-RAJA-CUDA.cpp
Intermediate_Tutorial/03-HIP/: CMakeLists.txt  README.md  fractal-ex3-RAJA-HIP.cpp
Intermediate_Tutorial/03-HIP/solutions/: CMakeLists.txt  fractal-ex3-RAJA-HIP-solution.cpp  fractal-solution-RAJA-HIP.cpp
Intermediate_Tutorial/04-LAUNCH/: CMakeLists.txt  README.md  fractal-ex4-RAJA-launch.cpp
Intermediate_Tutorial/04-LAUNCH/solution/: fractal-ex4-RAJA-launch-solution.cpp  fractal-ex4-RAJA-launch.cpp
Intermediate_Tutorial/04-TEAMS/: CMakeLists.txt
Intermediate_Tutorial/CUDA/: CMakeLists.txt  fractal-ex2-CUDA.cpp  fractal-ex2-RAJA-CUDA.cpp  fractal-ex3-RAJA-CUDA.cpp
Intermediate_Tutorial/CUDA/solutions/: CMakeLists.txt  fractal-solution-CUDA.cpp
Intermediate_Tutorial/HIP/: CMakeLists.txt  fractal-ex3-RAJA-HIP.cpp
Intermediate_Tutorial/RAJA-BACKENDS/: CMakeLists.txt  fractal-ex4-RAJA-HIP.cpp
Intermediate_Tutorial/RAJA-BACKENDS/solutions/: CMakeLists.txt
Intermediate_Tutorial/extras/: fractal-serial.cpp
Intro_Tutorial/lessons/: CMakeLists.txt
Intro_Tutorial/lessons/01_blt_cmake/: 01_blt_cmake  CMakeLists.txt  README.md
Intro_Tutorial/lessons/02/: CMakeLists.txt  README.md
Intro_Tutorial/lessons/02_raja_umpire/: CMakeLists.txt  README.md  two.cpp
Intro_Tutorial/lessons/03/: README.md
Intro_Tutorial/lessons/03/solution/: three_solution.cpp
Intro_Tutorial/lessons/03_umpire_allocator/: 03_umpire_allocator.cpp  03_umpire_allocator_solution.cpp  CMakeLists.txt  README.md
Intro_Tutorial/lessons/03_umpire_allocator/solution/: 03_umpire_allocator_solution.cpp
Intro_Tutorial/lessons/04/: CMakeLists.txt  README.md
Intro_Tutorial/lessons/04_raja_forall/: 04_raja_forall.cpp  CMakeLists.txt  README.md
Intro_Tutorial/lessons/04_raja_forall/solution/: 04_raja_forall_solution.cpp  four_solution.cpp
Intro_Tutorial/lessons/05/: CMakeLists.txt  README.md  five.cpp
Intro_Tutorial/lessons/05/solution/: five_solution.cpp
Intro_Tutorial/lessons/05_raja_reduce/: 05_raja_reduce.cpp  05_raja_reduce_solution.cpp  CMakeLists.txt  README.md  five.cpp
Intro_Tutorial/lessons/05_raja_reduce/solution/: 05_raja_reduce_solution.cpp
Intro_Tutorial/lessons/06/: CMakeLists.txt  README.md  six.cpp
Intro_Tutorial/lessons/06/solution/: six.cpp
Intro_Tutorial/lessons/06_07_raja_umpire_host_device/: 06_07_raja_umpire_host_device.cpp  CMakeLists.txt  README.md  old_07_raja_umpire_host_device.cpp
Intro_Tutorial/lessons/06_07_raja_umpire_host_device/solution/: 06_07_raja_umpire_host_device_solution.cpp
Intro_Tutorial/lessons/06_raja_umpire_host_device/: 06_raja_umpire_host_device.cpp  06_raja_umpire_host_device_solution.cpp  CMakeLists.txt  README.md
Intro_Tutorial/lessons/06_raja_umpire_host_device/solution/: 06_raja_umpire_host_device_solution.cpp
Intro_Tutorial/lessons/06_raja_umpire_uvm/: CMakeLists.txt  README.md
Intro_Tutorial/lessons/06_raja_umpire_uvm/solution/: 06_raja_umpire_uvm_solution.cpp  six_solution.cpp
Intro_Tutorial/lessons/07/: CMakeLists.txt  README.md  seven.cpp
Intro_Tutorial/lessons/07/solution/: seven.cpp
Intro_Tutorial/lessons/07_raja_algs/: 07_raja_atomic.cpp  07_raja_atomic_solution.cpp  07_raja_scan.cpp  07_raja_scan_solution.cpp  CMakeLists.txt  README.md
Intro_Tutorial/lessons/07_raja_algs/solution/: 07_raja_atomic_solution.cpp  07_raja_scan_solution.cpp
Intro_Tutorial/lessons/07_raja_umpire_host_device/: CMakeLists.txt  README.md
Intro_Tutorial/lessons/07_raja_umpire_host_device/solution/: seven_solution.cpp
Intro_Tutorial/lessons/08/: CMakeLists.txt  README.md  eight.cpp
Intro_Tutorial/lessons/08_raja_umpire_quick_pool/: 08_raja_umpire_quick_pool.cpp  08_raja_umpire_quick_pool_solution.cpp  CMakeLists.txt  README.md
Intro_Tutorial/lessons/08_raja_umpire_quick_pool/solution/: 08_raja_umpire_quick_pool_solution.cpp  eight_solution.cpp
Intro_Tutorial/lessons/09/: README.md  nine.cpp
Intro_Tutorial/lessons/09/solution/: nine_solution.cpp
Intro_Tutorial/lessons/09_raja_view/: 09_raja_view.cpp  09_raja_view_makepermuted.cpp  09_raja_view_solution.cpp  CMakeLists.txt  README.md
Intro_Tutorial/lessons/09_raja_view/solution/: 09_raja_view.cpp  (+2 more)
Intro_Tutorial/lessons/10/: README.md  ten.cpp
Intro_Tutorial/lessons/10_raja_kernel/: CMakeLists.txt  README.md
Intro_Tutorial/lessons/10_raja_launch/: 10_raja_launch_transpose.cpp  10_raja_launch_transpose_solution.cpp  12_raja_device_kernel_complete.cpp  CMakeLists.txt  README.md
Intro_Tutorial/lessons/11/: CMakeLists.txt  README.md  eleven.cpp
Intro_Tutorial/lessons/11_raja_device_kernel/: 11_raja_device_kernel.cpp  CMakeLists.txt  README.md
Intro_Tutorial/lessons/12/: CMakeLists.txt  README.md  twelve.cpp
Intro_Tutorial/lessons/12_raja_device_kernel_complete/: 12_raja_launch_transpose.cpp  CMakeLists.txt
Intro_Tutorial/lessons/NEW_raja_algs/: CMakeLists.txt  README.md
tpl/: CMakeLists.txt  writeBMP.cpp  writeBMP.hpp
(+62 files in other folders)
