add_subdirectory(01_blt_cmake)
add_subdirectory(02_raja_umpire)
add_subdirectory(03_umpire_allocator)
add_subdirectory(04_raja_forall)
add_subdirectory(05_raja_reduce)
add_subdirectory(06_raja_umpire_host_device)
add_subdirectory(07_raja_algs)
add_subdirectory(08_raja_umpire_quick_pool)
add_subdirectory(09_raja_view)
add_subdirectory(10_raja_launch)
